fixed english word lengths and cut off data on smaller screens on planning tables

--- a/client/src/assets/scss/Components/TablePlanningA.scss
+++ b/client/src/assets/scss/Components/TablePlanningA.scss
@@ -60,6 +60,16 @@
             text-align: left;
             font-size: 12.6px;
             font-weight: bold;
+            background-color: #efedea;
+          }
+          &.indented-label-english-mode{
+            text-align: right;
+            // background-color: palegoldenrod;
+          }
+          &.no-indent-english-mode{
+            text-align: left;
+            font-size: 12.6px;
+            background-color: #efedea;
           }
         }
         .input_tag{
@@ -88,6 +98,7 @@
   
         .total-txt {
           background-color: #daeef3;
+
         }
   
         .highlight {
